added tests (#112)
* added tests

* updates

* api cleanup

* interface cleanup

* UTF_8

* CommonsCoreModuleTest

* jacoco

* fixed test

* fix

* fixed test

* skip rule

* revert changes